<resources>
    <string name="app_name">Restaurant</string>
    <string name="post_code">Post Code:</string>
    <string name="city_name">City Name:</string>
    <string name="restaurant_name">Restaurant name:</string>
    <string name="restaurant_seat_number">Seats number:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="isDisabled">IsDisabled:</string>
    <string name="email">Email:</string>
    <string name="cities">Cities</string>
    <string name="restaurants">Restaurants</string>
    <string name="reservations">Reservations</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forget Password</string>
    <string name="click_here">Click here!</string>
    <string name="save">Save</string>
    <string name="summary">Summary</string>
    <string name="restaurant">Restaurant:</string>
    <string name="address">Address:</string>
    <string name="time">Time:</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="max_seats_number">Max Seats Number:</string>
    <string name="makeCity">Make City</string>
    <string name="makeRestaurant">Make Restaurant</string>
    <string name="editUser">Edit User</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="admin">Log in as Admin to see the Users!</string>
    <string name="date">Date:</string>
    <string name="add">Add</string>
    <string name="back_btn">Back</string>
</resources>