<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantActivity">

    <ListView
        android:id="@+id/restaurant_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout2" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/cities_tab_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cities" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/restaurant_tab_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/reservation_tab_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservations" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/users_tab_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users" />
    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/btn_login_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout2"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_restaurant"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_logout_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_settings_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout2"
        app:layout_constraintStart_toEndOf="@+id/btn_logout_restaurant"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>