<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/city_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_menu" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_menu"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/cities_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cities"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="-1dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/restaurants_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/reservation_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservations" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/users_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users" />
    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/btn_login_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout_menu"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_main"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>