<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeRestaurant">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/restaurant_name"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/resta_tb_name"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <EditText
        android:id="@+id/resta_tb_seat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="@+id/resta_tb_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resta_tb_name"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_seat_number"
        app:layout_constraintEnd_toStartOf="@+id/resta_tb_seat_number"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="257dp" />

    <EditText
        android:id="@+id/resta_tb_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25"
        tools:layout_editor_absoluteX="162dp" />

    <EditText
        android:id="@+id/resta_tb_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="@+id/resta_tb_seat_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resta_tb_seat_number"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resta_tb_address"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/makeRestaurant"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resta_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resta_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/resta_btn_save"
        app:layout_constraintEnd_toStartOf="@+id/resta_btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resta_btn_save" />

    <Button
        android:id="@+id/resta_btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/resta_btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resta_btn_save"
        app:layout_constraintTop_toTopOf="@+id/resta_btn_save" />
</androidx.constraintlayout.widget.ConstraintLayout>