<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_tb_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/settings_tb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/settings_tb_username"
        app:layout_constraintStart_toStartOf="@+id/settings_tb_username"
        tools:layout_editor_absoluteY="226dp" />

    <EditText
        android:id="@+id/settings_tb_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/settings_tb_password"
        app:layout_constraintStart_toStartOf="@+id/settings_tb_password"
        tools:layout_editor_absoluteY="328dp" />

    <EditText
        android:id="@+id/settings_tb_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/settings_tb_email"
        app:layout_constraintStart_toStartOf="@+id/settings_tb_email"
        tools:layout_editor_absoluteY="415dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tb_username"
        app:layout_constraintEnd_toStartOf="@+id/settings_tb_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_tb_username" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tb_password"
        app:layout_constraintEnd_toStartOf="@+id/settings_tb_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_tb_password" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tb_email"
        app:layout_constraintEnd_toStartOf="@+id/settings_tb_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_tb_email" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tb_reminder"
        app:layout_constraintEnd_toStartOf="@+id/settings_tb_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_tb_reminder" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isDisabled"
        app:layout_constraintBottom_toBottomOf="@+id/sw_disabled"
        app:layout_constraintEnd_toStartOf="@+id/sw_disabled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sw_disabled" />

    <Switch
        android:id="@+id/sw_disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/settings_tb_reminder"
        app:layout_constraintStart_toStartOf="@+id/settings_tb_reminder"
        tools:layout_editor_absoluteY="534dp" />
</androidx.constraintlayout.widget.ConstraintLayout>