<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUser">

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/user_tb_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_tb_username"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/user_tb_password"
        app:layout_constraintEnd_toStartOf="@+id/user_tb_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_tb_password" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/user_tb_email"
        app:layout_constraintEnd_toStartOf="@+id/user_tb_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_tb_email" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        app:layout_constraintBottom_toBottomOf="@+id/user_tb_reminder"
        app:layout_constraintEnd_toStartOf="@+id/user_tb_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_tb_reminder" />

    <Switch
        android:id="@+id/user_sw_disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/user_tb_reminder"
        app:layout_constraintStart_toStartOf="@+id/user_tb_reminder"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isDisabled"
        app:layout_constraintBottom_toBottomOf="@+id/user_sw_disabled"
        app:layout_constraintEnd_toStartOf="@+id/user_sw_disabled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_sw_disabled" />

    <EditText
        android:id="@+id/user_tb_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        tools:layout_editor_absoluteY="118dp" />

    <EditText
        android:id="@+id/user_tb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/user_tb_email"
        app:layout_constraintEnd_toEndOf="@+id/user_tb_username"
        app:layout_constraintStart_toStartOf="@+id/user_tb_username"
        app:layout_constraintTop_toBottomOf="@+id/user_tb_username" />

    <EditText
        android:id="@+id/user_tb_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/user_tb_password"
        app:layout_constraintStart_toStartOf="@+id/user_tb_password"
        tools:layout_editor_absoluteY="279dp" />

    <EditText
        android:id="@+id/user_tb_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/user_sw_disabled"
        app:layout_constraintEnd_toEndOf="@+id/user_tb_email"
        app:layout_constraintStart_toStartOf="@+id/user_tb_email"
        app:layout_constraintTop_toBottomOf="@+id/user_tb_email" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/editUser"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/user_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="607dp" />

    <Button
        android:id="@+id/user_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="607dp" />

</androidx.constraintlayout.widget.ConstraintLayout>